# clip_search

./: README.md  pyproject.toml
clip_search/: encode.py
