[tool.poetry]
name = "clip_search"
version = "0.1.0"
description = ""
authors = ["MarkusSagen <markus.john.sagen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
tqdm = "^4.64.0"
numpy = "^1.22.4"
pandas = "^1.4.2"
torch = "^1.11.0"
scikit-learn = "^1.1.1"
ftfy = "^6.1.1"
regex = "^2022.4.24"
clip = { git = "https://github.com/openai/CLIP.git", branch = "main"}
Pillow = "^9.1.1"
torchmetrics = "^0.8.2"
torchvision = "^0.12.0"
torchtext = "^0.12.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^7.1.2"
mypy = "^0.950"
isort = "^5.10.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
